Bug 160952 - Unexpected top margin for paragraph at the top of non-first pages from DOCX
Summary: Unexpected top margin for paragraph at the top of non-first pages from DOCX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL: https://vmiklos.hu/blog/sw-ignore-mar...
Whiteboard: target:24.8.0 target:24.2.4
Keywords:
Depends on:
Blocks: DOCX-Page 164787
  Show dependency treegraph
 
Reported: 2024-05-06 09:06 UTC by Miklos Vajna
Modified: 2025-10-17 09:33 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (14.55 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2024-05-06 09:06 UTC, Miklos Vajna
Details
LO25.2.0.2 adding reported unwanted top margin (221.60 KB, image/png)
2025-01-20 15:06 UTC, Piotr Osada
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2024-05-06 09:06:00 UTC
Created attachment 193984 [details]
Minimal reproducer

Step to reproduce the problem:

1) Open the attached DOCX file, created in Word 2013.
2) Check the top margin of the only paragraph on page 2.

Expected result: no top margin, like in Word.

Actual result: some ~4cm top margin.
Comment 1 Commit Notification 2024-05-07 07:18:52 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6200d89b905d51776ff4f3c8a84f338655ffaa7f

tdf#160952 sw: ignore top margin of para on non-first pages with newer DOCX

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-05-14 09:16:22 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/abd90828cf101581a07b9d1c371a8c3156521e9f

tdf#160952 sw: ignore top margin of para on non-first pages with newer DOCX

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-05-15 11:08:42 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6025ac371bd5cd07c0af550d78db323ad394173b

tdf#160952 sw: ignore top margin only at page top, not e.g. table top

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-05-16 07:41:34 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/ed4316d109841c31de49493092d82b40259e818a

tdf#160952 sw: ignore top margin only at page top, not e.g. table top

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-05-17 07:21:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b969e692000f50aafacc2eb577f545b8836dcc26

tdf#160952 sw: ignore top margin only at page top, not in fly

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-05-17 09:01:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/9b508c45a7c30a5c1847b7d93f2a26a653102588

tdf#160952 sw: ignore top margin only at page top, not in fly

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Piotr Osada 2025-01-20 15:06:45 UTC
Created attachment 198629 [details]
LO25.2.0.2 adding reported unwanted top margin

25.2 RC2 still renders reported 4,23 cm top margin.

Version: 25.2.0.2 (X86_64) / LibreOffice Community
Build ID: 62af784cc06624122f17ee71c7cf13d906cbaed0
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 26100); UI render: Skia/Vulkan; VCL: win
Locale: pl-PL (pl_PL); UI: en-US
Calc: CL threaded
Comment 8 Miklos Vajna 2025-01-20 15:20:11 UTC
Could you please create a new bug for your problem? This bug already has a fix associated with it and the https://git.libreoffice.org/core/commit/6200d89b905d51776ff4f3c8a84f338655ffaa7f added an automated test, so that specific use-case still works.

Best to file a new bug for a related problem. Thanks.
Comment 9 Piotr Osada 2025-01-21 16:00:58 UTC
(In reply to Miklos Vajna from comment #8)
> Could you please create a new bug for your problem?

Here you have: the bug 164787.
Comment 10 Miklos Vajna 2025-01-22 07:38:52 UTC
OK, let's go back to resolved-fixed here as it was since 2024-05. Thanks.